# TxChain

./: .gitignore  CMakeLists.txt  Makefile  Project_Instructions.md  README.md  client.cpp  monitor.cpp  package.sh  serverA.cpp  serverB.cpp  serverC.cpp  serverM.cpp
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/txchain/: main.cpp
apps/txnode/: main.cpp
cmake/: warnings.cmake
include/txchain/: chain.hpp  config.hpp  crypto.hpp  log.hpp  mempool.hpp  metrics.hpp  p2p.hpp  pow.hpp  rpc.hpp  serialize.hpp  state.hpp
include/txchain/chain/: chain.hpp  gate.hpp  genesis.hpp  params.hpp  reason.hpp  store.hpp  types.hpp  validate.hpp
include/txchain/crypto/: address.hpp  ed25519.hpp  fixedbytes.hpp  hashutil.hpp  sha256.hpp
include/txchain/mempool/: mempool.hpp
include/txchain/net/: frame.hpp
include/txchain/node/: node.hpp
include/txchain/pow/: candidate.hpp  forkchoice.hpp  miner.hpp
include/txchain/rpc/: http_client.hpp  http_server.hpp  rpc.hpp
include/txchain/serialize/: canonical.hpp  json.hpp  types.hpp
include/txchain/wallet/: wallet.hpp
scripts/: check_no_fake_verify.sh  gen_genesis.py
src/: CMakeLists.txt
src/chain/: chain.cpp  gate.cpp  genesis.cpp  store.cpp  validate.cpp
src/config/: config.cpp
src/crypto/: address.cpp  crypto.cpp  ed25519_ref10.cpp  ed25519_sodium.cpp  hashutil.cpp  sha256.cpp
src/log/: log.cpp
src/mempool/: mempool.cpp
src/metrics/: metrics.cpp
src/node/: node.cpp
src/p2p/: frame.cpp  p2p.cpp
src/pow/: candidate.cpp  forkchoice.cpp  miner.cpp  pow.cpp
src/rpc/: http_client.cpp  http_server.cpp  rpc.cpp
src/serialize/: canonical.cpp  json.cpp  serialize.cpp
src/state/: state.cpp
src/wallet/: wallet.cpp
tests/: CMakeLists.txt
tests/golden/: address_test.cpp  ed25519_crossbackend_test.cpp  ed25519_rfc8032_test.cpp  ed25519_vectors.hpp  frame_codec_test.cpp  genesis_test.cpp  golden_blockhash_test.cpp  golden_txid_test.cpp  serialize_vectors.hpp  sha256_kat_test.cpp
tests/unit/: candidate_test.cpp  chain_jsonl_test.cpp  chain_state_test.cpp  connect_block_test.cpp  forkchoice_test.cpp  hex_roundtrip_test.cpp  mempool_test.cpp  miner_test.cpp  node_test.cpp  pow_coinbase_test.cpp  pow_target_test.cpp  replay_test.cpp  rpc_test.cpp  send_test.cpp  sentinel_test.cpp  serialize_roundtrip_test.cpp  verify_gate_test.cpp  wallet_test.cpp
tools/: CMakeLists.txt  mine_bench.cpp
